# hark-app

./: .gitignore  Gemfile  LICENSE  README.md  build.gradle.kts  fb39ddc  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts  version.properties
app/beta/: output-metadata.json
app/beta/baselineProfiles/0/: app-beta.dm
app/beta/baselineProfiles/1/: app-beta.dm
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/tapps/hark/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hark_audio_engine.cpp  hark_audio_engine.h  jni_bridge.cpp
app/src/main/cpp/dsp/: biquad_filter.h  dsp_utils.h  noise_gate.h  pink_noise_generator.cpp  pink_noise_generator.h
app/src/main/cpp/engine/: hark_audio_engine.cpp  hark_audio_engine.h
app/src/main/cpp/jni/: jni_bridge.cpp
app/src/main/java/com/tapps/hark/: AudioStreamingService.kt  (+2 more)
app/src/main/res/drawable/: appicon_foreground.xml  ic_home.xml  ic_launcher_monochrome.xml  ic_mic_off.xml  ic_mic_on.xml  ic_settings.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: appicon_background.xml  ic_launcher_background.xml  ic_launcher_monochrome_icon_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+50 files in other folders)
